# got-Proyect3

./: .travis.yml  CMakeLists.txt  sonar-project.properties
client/: .gitignore  CMakeLists.txt
client/include/: client.hpp  commands.hpp  controlServerCliente.hpp  huffman.hpp
client/src/: client.cpp  commands.cpp  controlServerCliente.cpp  huffman.cpp  main.cpp  md5.cpp
server/: package.json
server/db/: database.sql
server/src/: database.js  index.js
server/src/routes/: database_got.js
